add validation on freelancer profile