@@ -10,13 +10,14 @@ import com.jobmatcher.server.repository.*;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
+import static org.assertj.core.api.Assertions.assertThat;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.*;
 import static org.mockito.Mockito.*;
@@ -35,9 +36,6 @@ class FreelancerProfileServiceImplTest {
 
     @Mock
     private JobSubcategoryRepository subcategoryRepository;
-
-    @Mock
-    private SkillRepository skillRepository;
 
     @Mock
     private SkillServiceImpl skillService;
@@ -111,7 +109,7 @@ class FreelancerProfileServiceImplTest {
         when(subcategoryRepository.findAllById(anyCollection())).thenAnswer(invocation -> {
             Collection<?> ids = invocation.getArgument(0);
             System.out.println("findAllById called with IDs: " + ids + ", types: " +
-                    ids.stream().map(Object::getClass).collect(Collectors.toList()));
+                    ids.stream().map(Object::getClass).toList());
 
             boolean containsId = ids.stream()
                     .anyMatch(id -> {
@@ -127,8 +125,6 @@ class FreelancerProfileServiceImplTest {
             return List.of();
         });
 
-
-
         when(languageRepository.findAllById(Set.of(1))).thenReturn(List.of(new Language(1, "English")));
 
         Skill javaSkill = new Skill("Java");
@@ -136,7 +132,7 @@ class FreelancerProfileServiceImplTest {
         when(skillService.findOrCreateByName("Java")).thenReturn(javaSkill);
         when(skillService.findOrCreateByName("Spring")).thenReturn(springSkill);
 
-        when(profileMapper.toEntity(any(), eq(user), any(), any(), any())).thenReturn(profile);
+        when(profileMapper.toEntity(any(), eq(user), any(), any(), any(), any(), any(), any(), any(), any())).thenReturn(profile);
         when(profileRepository.save(profile)).thenReturn(profile);
         when(profileMapper.toFreelancerDetailDto(profile)).thenReturn(detailDTO);
 
@@ -210,7 +206,7 @@ class FreelancerProfileServiceImplTest {
 
         // Mapper & save
         FreelancerProfile dummyEntity = new FreelancerProfile();
-        when(profileMapper.toEntity(any(), any(), any(), any(), any())).thenReturn(dummyEntity);
+        when(profileMapper.toEntity(any(), any(), any(), any(), any(), any(), any(), any(), any(), any())).thenReturn(dummyEntity);
         when(profileRepository.save(any())).thenReturn(dummyEntity);
         when(profileMapper.toFreelancerDetailDto(dummyEntity)).thenReturn(FreelancerDetailDTO.builder().build());
 
@@ -257,7 +253,6 @@ class FreelancerProfileServiceImplTest {
         // Mark this stubbing as lenient because it's not hit before the exception
         lenient().when(skillService.findOrCreateByName("java")).thenReturn(new Skill("java"));
 
-
         // Simulate missing languages
         when(languageRepository.findAllById(any())).thenReturn(List.of());
 
@@ -276,7 +271,6 @@ class FreelancerProfileServiceImplTest {
         // Setup minimal required valid user and subcategory
         when(userRepository.findById(any())).thenReturn(Optional.of(new User()));
         when(subcategoryRepository.findAllById(any())).thenReturn(List.of(new JobSubcategory()));
-//        when(skillRepository.findByNameIgnoreCase(any())).thenReturn(Optional.of(new Skill("java")));
         when(skillService.findOrCreateByName("java")).thenReturn(new Skill("java"));
 
         // Make languageIds null
@@ -294,7 +288,6 @@ class FreelancerProfileServiceImplTest {
     void saveFreelancerProfile_emptyLanguageIds_returnsEmptySet() {
         when(userRepository.findById(any())).thenReturn(Optional.of(new User()));
         when(subcategoryRepository.findAllById(any())).thenReturn(List.of(new JobSubcategory()));
-//        when(skillRepository.findByNameIgnoreCase(any())).thenReturn(Optional.of(new Skill("java")));
         when(skillService.findOrCreateByName("java")).thenReturn(new Skill("java"));
 
         FreelancerProfileRequestDTO dto = FreelancerProfileRequestDTO.builder()
@@ -311,7 +304,6 @@ class FreelancerProfileServiceImplTest {
     void saveFreelancerProfile_nullSubcategoryIds_returnsEmptySet() {
         when(userRepository.findById(any())).thenReturn(Optional.of(new User()));
         when(skillService.findOrCreateByName("Java")).thenReturn(new Skill("Java"));
-//        when(skillRepository.findByNameIgnoreCase(any())).thenReturn(Optional.of(new Skill("Java")));
         when(languageRepository.findAllById(any())).thenReturn(List.of(new Language("English")));
 
         FreelancerProfileRequestDTO dto = FreelancerProfileRequestDTO.builder()
@@ -328,7 +320,6 @@ class FreelancerProfileServiceImplTest {
     void saveFreelancerProfile_emptySubcategoryIds_returnsEmptySet() {
         when(userRepository.findById(any())).thenReturn(Optional.of(new User()));
         when(skillService.findOrCreateByName("Java")).thenReturn(new Skill("Java"));
-//        when(skillRepository.findByNameIgnoreCase(any())).thenReturn(Optional.of(new Skill("Java")));
         when(languageRepository.findAllById(any())).thenReturn(List.of(new Language("English")));
 
         FreelancerProfileRequestDTO dto = FreelancerProfileRequestDTO.builder()
@@ -339,6 +330,177 @@ class FreelancerProfileServiceImplTest {
                 .build();
 
         assertDoesNotThrow(() -> service.saveFreelancerProfile(dto));
+    }
+
+    @Test
+    void updateFreelancerProfile_shouldSanitizeAndSetSocialMedia() {
+        // Arrange: prepare existing profile & request DTO with socialMedia
+        when(profileRepository.findById(profileId)).thenReturn(Optional.of(profile));
+
+        when(subcategoryRepository.findAllById(anySet())).thenReturn(List.of(new JobSubcategory("code", "name", new JobCategory("catCode", "catName"))));
+        when(languageRepository.findAllById(anySet())).thenReturn(List.of(new Language(1, "English")));
+
+        Skill javaSkill = new Skill("Java");
+        Skill springSkill = new Skill("Spring");
+        when(skillService.findOrCreateByName("Java")).thenReturn(javaSkill);
+        when(skillService.findOrCreateByName("Spring")).thenReturn(springSkill);
+
+        when(profileRepository.save(any())).thenAnswer(invocation -> invocation.getArgument(0));
+        when(profileMapper.toFreelancerDetailDto(any())).thenReturn(detailDTO);
+
+        // Add socialMedia URLs with some test strings (simulate URLs needing sanitization)
+        Set<String> socialMediaUrls = Set.of("https://example.com/profile", "http://malicious-site.com/");
+
+        // Clone or create DTO with socialMedia
+        FreelancerProfileRequestDTO dtoWithSocialMedia = FreelancerProfileRequestDTO.builder()
+                .userId(user.getId())
+                .skills(Set.of("Java", "Spring"))
+                .jobSubcategoryIds(Set.of(1L))
+                .languageIds(Set.of(1))
+                .socialMedia(socialMediaUrls)
+                .build();
+
+        // Act
+        FreelancerDetailDTO result = service.updateFreelancerProfile(profileId, dtoWithSocialMedia);
+
+        // Assert
+        assertNotNull(result);
+        // Verify that setSocialMedia on profile was called with sanitized URLs
+        verify(profileRepository).save(argThat(p ->
+                p.getSocialMedia() != null &&
+                        p.getSocialMedia().size() == socialMediaUrls.size()
+        ));
+    }
+
+    @Test
+    void updateFreelancerProfile_shouldSanitizeMaliciousSocialMediaUrls() {
+        // Arrange
+        when(profileRepository.findById(profileId)).thenReturn(Optional.of(profile));
+        when(subcategoryRepository.findAllById(anySet())).thenReturn(List.of(new JobSubcategory("code", "name", new JobCategory("catCode", "catName"))));
+        when(languageRepository.findAllById(anySet())).thenReturn(List.of(new Language(1, "English")));
+        when(skillService.findOrCreateByName("Java")).thenReturn(new Skill("Java"));
+
+        // Malicious-looking URL input (XSS attempt)
+        Set<String> socialMediaInput = Set.of(
+                "https://safe-site.com",
+                "javascript:alert('XSS')",
+                "  http://injected.com/<script>alert('pwn')</script>  "
+        );
+
+        FreelancerProfileRequestDTO dto = FreelancerProfileRequestDTO.builder()
+                .userId(user.getId())
+                .skills(Set.of("Java"))
+                .jobSubcategoryIds(Set.of(1L))
+                .languageIds(Set.of(1))
+                .socialMedia(socialMediaInput)
+                .build();
+
+        // Capture saved profile
+        ArgumentCaptor<FreelancerProfile> profileCaptor = ArgumentCaptor.forClass(FreelancerProfile.class);
+        when(profileRepository.save(profileCaptor.capture())).thenAnswer(invocation -> invocation.getArgument(0));
+        when(profileMapper.toFreelancerDetailDto(any())).thenReturn(detailDTO);
+
+        // Act
+        FreelancerDetailDTO result = service.updateFreelancerProfile(profileId, dto);
+
+        // Assert
+        Set<String> sanitizedUrls = profileCaptor.getValue().getSocialMedia();
+        assertTrue(sanitizedUrls.contains("https://safe-site.com"));
+        assertFalse(sanitizedUrls.contains("javascript:alert('XSS')"));
+        assertFalse(sanitizedUrls.stream().filter(Objects::nonNull).anyMatch(s -> s.contains("<script>"))
+        );
+        assertTrue(sanitizedUrls.stream().filter(Objects::nonNull).allMatch(s -> s.startsWith("http")));
+    }
+
+    @Test
+    void saveProfile_shouldIgnoreBlankSocialMediaAndSkills() {
+        UUID someUserId = UUID.randomUUID();
+        Set<String> skills = new HashSet<>(Arrays.asList("Java", null, "   "));
+        FreelancerDetailDTO detailDTO = FreelancerDetailDTO.builder()
+                .socialMedia(Set.of("https://github.com/test"))
+                .build();
+        FreelancerProfileRequestDTO dto = FreelancerProfileRequestDTO.builder()
+                .userId(someUserId)
+                .username("testuser")
+                .headline("Some headline")
+                .about("Some about text")
+                .websiteUrl("https://example.com")
+                .socialMedia(Set.of("https://github.com/test", "   ", ""))
+                .skills(skills)
+                .jobSubcategoryIds(Set.of(1L))
+                .languageIds(Set.of(1))
+                .build();
+
+        // Stub skill service
+        Skill javaSkill = new Skill();
+        javaSkill.setName("Java");
+        when(skillService.findOrCreateByName("Java")).thenReturn(javaSkill);
+
+        // Stub repo results
+        User user = new User();
+        user.setId(someUserId);
+        when(userRepository.findById(someUserId)).thenReturn(Optional.of(user));
+        when(subcategoryRepository.findAllById(Set.of(1L))).thenReturn(List.of(new JobSubcategory(1L, "Web Dev")));
+        when(languageRepository.findAllById(Set.of(1))).thenReturn(List.of(new Language(1, "English")));
+        when(profileMapper.toFreelancerDetailDto(any())).thenReturn(detailDTO);
+
+        // Execute
+        FreelancerDetailDTO result = service.saveFreelancerProfile(dto);
+
+        // Validate social media cleaned
+        assertThat(result.getSocialMedia()).containsExactly("https://github.com/test");
+
+        // Validate skill handling
+        verify(skillService, times(1)).findOrCreateByName("Java");
+    }
+
+    @Test
+    void updateFreelancerProfile_sanitizesVariousSocialMediaInputs() {
+        when(profileRepository.findById(profileId)).thenReturn(Optional.of(profile));
+        when(subcategoryRepository.findAllById(anySet())).thenReturn(List.of(new JobSubcategory("code", "name", new JobCategory("cat", "cat"))));
+        when(languageRepository.findAllById(anySet())).thenReturn(List.of(new Language(1, "English")));
+        when(skillService.findOrCreateByName(anyString())).thenReturn(new Skill());
+
+        Set<String> inputs = new HashSet<>(Arrays.asList(
+                "http://valid.com",
+                "HTTPS://VALID.COM",
+                " javascript:alert('XSS')",
+                "ftp://unsupported-protocol.com",
+                "http://valid.com/?q=<script>",
+                "  ",
+                null,
+                "http://valid.com/normal"
+        ));
+
+        FreelancerProfileRequestDTO dto = FreelancerProfileRequestDTO.builder()
+                .userId(user.getId())
+                .skills(Set.of("Java"))
+                .jobSubcategoryIds(Set.of(1L))
+                .languageIds(Set.of(1))
+                .socialMedia(inputs)
+                .build();
+
+        ArgumentCaptor<FreelancerProfile> captor = ArgumentCaptor.forClass(FreelancerProfile.class);
+        when(profileRepository.save(captor.capture())).thenAnswer(i -> i.getArgument(0));
+        when(profileMapper.toFreelancerDetailDto(any())).thenReturn(detailDTO);
+
+        FreelancerDetailDTO result = service.updateFreelancerProfile(profileId, dto);
+
+        Set<String> sanitized = captor.getValue().getSocialMedia();
+
+        assertTrue(sanitized.contains("http://valid.com"));
+        assertFalse(sanitized.contains("HTTPS://VALID.COM"));
+        assertFalse(sanitized.contains(" javascript:alert('XSS')"));
+        assertFalse(sanitized.contains("ftp://unsupported-protocol.com"));
+        assertFalse(sanitized.stream().anyMatch(s -> s != null && s.toLowerCase().contains("javascript:")));
+        assertFalse(sanitized.stream().anyMatch(s -> s != null && s.toLowerCase().contains("<script>")));
+
+        assertTrue(
+                sanitized.stream()
+                        .anyMatch(s -> s != null && s.trim().equalsIgnoreCase("http://valid.com/?q=script"))
+        );
+        assertFalse(sanitized.contains(null));
+        assertFalse(sanitized.contains("  "));
     }
 
 }
